--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,45 @@
-body{
+body {
   background-color: #dbe2ef;
   text-align: center;
+  font-family: 'Bangers', cursive;
+}
+
+.game-name {
+  padding: 3% 0 2%;
+  color: #3f72af;
+  font-size: 5em;
+}
+
+.heading {
+  font-size: 4em;
+}
+
+.button-container {
+  padding-top: 5%;
+}
+
+.row {
+  padding: 1% 30%;
+}
+
+.btn {
+  width: 200px;
+  height: 200px;
+  
+}
+
+#green {
+  background-color: green;
+}
+
+#red {
+  background-color: red;
+}
+
+#yellow {
+  background-color: yellow;
+}
+
+#blue {
+  background-color: blue;
 }
